# home

./: .envrc  .gitignore  .gitmodules  .sops.yaml  CLAUDE.md  Pipfile  README.md  ansible.cfg  cloudflare_config.yml  config.yml  hosts.json  kubeconfig.yml  package.json  playbook.yml  pyproject.toml  requirements.yml  sops-hosts.sh  tasksfile.js
boot/: wpa_supplicant.conf
datadog/: disk.yaml  system_swap.yaml
docs/superpowers/plans/: 2026-05-25-ingress-self-heal.md
docs/superpowers/specs/: 2026-05-25-ingress-self-heal-design.md
files/cannoli/: wg1.conf
files/pi/: wg1.conf
homepage/: Dockerfile  default.conf  default.conf.template
homepage/public/: index.html
light-puck/: light-puck.service  light.py  pyproject.toml
plays/: cloudflare.yml  datadog.yml  docker_secrets.yml  external.yml  glances.yml  homepage.yml  light.yml  portainer.yml  registry.yml  setup.yml  sync.yml  temporal_web.yml  temporalite.yml  traefik.yml  vpn.yml
resilio/: notes
roles/actual/tasks/: main.yml
roles/backup/tasks/: main.yml
roles/backup/templates/: backup-mount.sh  backup-unmount.sh
roles/cloudflare/tasks/: main.yml
roles/convertx/tasks/: main.yml
roles/datadog/handlers/: main.yml
roles/datadog/tasks/: main.yml
roles/dbos/tasks/: main.yml
roles/donetick/: Dockerfile
roles/planner/: .envrc  .gitignore  Dockerfile  docker-compose.yml  nodemon.json  package.json  tsconfig.json
tasks/: docker_mirror_image.yml
temporalite/: Dockerfile  docker-compose.yml  env.yml
traefik/: users
vpn/: autopi.conf  mbp.conf  notes  phone.conf  pi-wg0.conf  pi-wg1.conf
(+113 files in other folders)
