[tool.poetry]
name = "home"
version = "0.1.0"
description = ""
authors = ["Ricardo Matsui"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.7.0"
openshift = "^0.12.1"
docker = "^5.0.3"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
